--- a/game_service/templates/game_over.html
+++ b/game_service/templates/game_over.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Магический Лес - Начало игры</title>
+    <title>Игра окончена. К сожалению, ваш персонаж умер.</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -41,9 +41,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>🌟 Добро пожаловать в Магический Лес! 🌟</h1>
+        <h1>🌟 Игра окончена. К сожалению, ваш персонаж умер.</h1>
         <form id="startForm" action="/start" method="post">
-            <button type="submit" class="start-btn">Начать приключение</button>
+            <button type="submit" class="start-btn">Начать приключение заново</button>
         </form>
     </div>
 
